--- a/src/app/layer-panel/layer-panel.component.html
+++ b/src/app/layer-panel/layer-panel.component.html
@@ -36,7 +36,7 @@
               </div>
               <div *ngIf="layer.wfs">
                 <button mat-icon-button
-                        (click)="onEditLayerClick($event, layer, group.name)" >
+                        (click)="onEditLayerClick($event, layer, group.groupName)" >
                   <mat-icon  class= "editIcon">edit</mat-icon>
                 </button>
               </div>
