--- a/src/app/layer-panel/layer-panel.component.html
+++ b/src/app/layer-panel/layer-panel.component.html
@@ -6,8 +6,8 @@
 <mat-card class = 'layerPanelCard'>
   <mat-card-title-group>
       <mat-card-title class ="panelTitle">Layers  </mat-card-title>
-      <button mat-flat-button   (click)="closeLayerPanel(false)" class="matCloseWrapper" >
-        <mat-icon>close</mat-icon>
+      <button mat-flat-button   (click)="closeLayerPanel(false)"  >
+        <mat-icon class="closeLayerPanel">close</mat-icon>
       </button>
   </mat-card-title-group>
   <mat-divider class = "toolbarDivider"></mat-divider>
