--- a/src/app/layer-panel/layer-panel.component.scss
+++ b/src/app/layer-panel/layer-panel.component.scss
@@ -137,6 +137,13 @@
   margin-top: -1.3vw !important;
 }
 
+.closeLayerPanel {
+  padding: 0 0 0 0 !important;
+  width: 1.7vw !important;
+  height: 1.7vw !important;
+  // line-height: 18px !important;
+  margin-top: 0 !important;
+}
 
 // mat-focus-indicator mat-icon-button mat-button-base
 
