progress in edit via WFS

--- a/src/app/editing-toolbar/editing-toolbar.component.html
+++ b/src/app/editing-toolbar/editing-toolbar.component.html
@@ -8,10 +8,10 @@
                 (click)="drawingShapes('Point')" matTooltip="Add point/marker TEST GITHUB workflow" [ngClass]="actionActive['Point'] ? 'active': 'normal'">
         <mat-icon>add_location</mat-icon>
       </button>
-      <button   *ngIf= " (layerTypeEdit$ == 'Point' || layerTypeEdit$ == 'Multi' || layerTypeEdit$ == 'MultiPoint') " mat-icon-button
+      <!-- <button   *ngIf= " (layerTypeEdit$ == 'Point' || layerTypeEdit$ == 'Multi' || layerTypeEdit$ == 'MultiPoint') " mat-icon-button
                 (click)="drawingShapes('PointAttr')" matTooltip="Add point/marker + attribute TEST GITHUB workflow" [ngClass]="actionActive['Point'] ? 'active': 'normal'">
         <mat-icon svgIcon="add_location_attr"></mat-icon>
-      </button>
+      </button> -->
       <button mat-icon-button *ngIf="(layerTypeEdit$ == 'Line' || layerTypeEdit$ =='Multi' || layerTypeEdit$ == 'Polygon'|| layerTypeEdit$ == 'MultiPolygon'|| layerTypeEdit$ == 'MultiPolygonz') "
               (click)="drawingShapes('LineString')" matTooltip="Add line" [ngClass]="actionActive['LineString'] ? 'active': 'normal'">
         <mat-icon    svgIcon="add_line"></mat-icon>
@@ -76,8 +76,8 @@
       </button>
       <span class = "spacer"></span>
       <div class="divClosing">
-        <button mat-mini-fab (click)="closeEditingToolbar()" class="matCloseWrapper" >
-          <mat-icon  class= "closeIcon ">close</mat-icon>
+        <button mat-flat-button (click)="closeEditingToolbar()"  >
+          <mat-icon class="closeIcon">close</mat-icon>
         </button>
       </div>
      </mat-toolbar>
