--- a/src/app/layer-panel/layer-panel.component.scss
+++ b/src/app/layer-panel/layer-panel.component.scss
@@ -60,6 +60,20 @@
   // align-items: left; //center;
 }
 
+.iconLegend {
+  max-width:20px;
+  max-height:20px;
+}
+.iconTitle{
+  display:inline-block;
+  padding-left: 5px;
+}
+.iconImage{
+  display:inline-block;
+  padding-left: 0px;
+}
+
+
 .cdk-drag-preview {
   box-sizing: border-box;
   border-radius: 4px;
