--- a/src/app/dynamic-form/dynamic-form.component.html
+++ b/src/app/dynamic-form/dynamic-form.component.html
@@ -1,15 +1,15 @@
 <div class ="example-list"  *ngIf="showForm$ | async"  cdkDragBoundary=".map" cdkDrag >
-<p>dynamic-form works!</p>
+<span class="tittle"><strong>Details</strong></span>
   <form (ngSubmit)="onSubmit()" [formGroup]="form">
 
     <div *ngFor="let question of sQuestions" class="form-row">
      <!-- <app-question [question]="question" [form]="form"></app-question> -->
       <div [formGroup]="form">
-        <label [attr.for]="question.key">{{question.label}}</label>
+        <label class="label" [attr.for]="question.key">{{question.label}}: </label>
 
-        <div [ngSwitch]="question.controlType">
+        <div class="inputField" [ngSwitch]="question.controlType">
 
-          <input *ngSwitchCase="'textbox'" [formControlName]="question.key"
+          <input class="inputText" *ngSwitchCase="'textbox'" [formControlName]="question.key"
                  [id]="question.key" [type]="question.type">
 
           <select [id]="question.key" *ngSwitchCase="'dropdown'" [formControlName]="question.key">
@@ -25,7 +25,7 @@
     </div>
 
     <div class="form-row">
-      <button type="submit" [disabled]="!form.valid">Save</button>
+      <button class="" type="submit" [disabled]="!form.valid">Ok</button>
     </div>
   </form>
 
