--- a/src/app/layer-panel/layer-panel.component.html
+++ b/src/app/layer-panel/layer-panel.component.html
@@ -124,9 +124,9 @@
                      <button mat-icon-button (click)="onIdentifyLayerClick($event, layer, group.groupName)">
                        <mat-icon class= "editIcon" >info_outline</mat-icon>
                      </button>
-                     <button mat-icon-button (click)="onOpacityLayerClick($event, layer)">
+                    <!-- <button mat-icon-button (click)="onOpacityLayerClick($event, layer)">
                        <mat-icon  class= "editIcon">opacity</mat-icon>
-                     </button>
+                     </button> -->
                    </div>
                   </div>
                 </mat-list-option>
