--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -20,5 +20,5 @@
                    [showForm]="showFormSubject.asObservable()"
                   [dataForm] = "dataForm"
                     (formSubmitted) = "getFormData($event)"
-                    > <!--[questions]="formQuestions" -->  <!-- from parent to Child) -->
+                    [featureLayer] = "featureLayerForm"> <!--[questions]="formQuestions" -->  <!-- from parent to Child) -->
 </app-dynamic-form>
