--- a/src/app/dynamic-form/dynamic-form.component.scss
+++ b/src/app/dynamic-form/dynamic-form.component.scss
@@ -1,6 +1,6 @@
 .example-list{
   left: 60% !important;
-  max-width: 12%;
+  max-width: 15%;
   top: 40% !important;
 }
 .label{
@@ -12,7 +12,7 @@
   padding-left: 5px;
   display:inline-block;
   max-width: 80%;
-  line-height: 50px;
+  line-height: 12px;
 }
 .tittle{
   // padding-left: 5px;
@@ -22,6 +22,6 @@
   padding-top: 15px;
 }
 .inputField
-{ padding: 20px 10px;
-  line-height: 28px !important;
+{ padding: 0 10px;
+  line-height: 14px !important;
 }
