some fixes + dragbox

--- a/src/app/dynamic-form/dynamic-form.component.html
+++ b/src/app/dynamic-form/dynamic-form.component.html
@@ -44,8 +44,8 @@
     </div>
   </form>
 
-  <div *ngIf="payLoad" class="form-row">
+  <!-- <div *ngIf="payLoad" class="form-row">
     <strong>Saved the following values</strong><br>{{payLoad}}
-  </div>
+  </div> !-->
 </div>
 
