--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,5 +1,5 @@
 <div id="map" class="map">
-  <div data-tooltip="algo" id ='info'>  <!--class="tooltip" id="info" -->
+  <div id ='info'>  <!--class="tooltip" id="info" -->
     <span id=spanTool class = "tooltiptext"></span>
   </div>
   <div id ="progress">
