--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -20,8 +20,11 @@
     <button mat-icon-button aria-labelledby="Add a scratch layer" matTooltip="Add a scratch layer" (click)="createScratchLayer()" >
     <mat-icon class="svgIconToolbar" svgIcon="layerScratch"></mat-icon>
     </button>
-    <button mat-icon-button (click)="startAction('Identify')"  aria-label="identify" matTooltip="Identify element">
+   <!-- <button mat-icon-button (click)="startAction('Identify')"  aria-label="identify" matTooltip="Identify element">
       <mat-icon svgIcon="identify"></mat-icon>
+    </button> -->
+    <button mat-icon-button (click)="searchOnMap"  aria-label="identify" matTooltip="Search in map">
+      <mat-icon>search</mat-icon>
     </button>
   </mat-toolbar>
 </mat-card>
